# 68000-microcode-division

./: .gitignore  CMakeLists.txt  LICENCE  README.MD
docs/: bibliography.md  microcode.md  signed-division-algorithm.md  unsigned-division-algorithm.md
docs-third-party/: US4325121 - Appendix F Microcode.txt
docs/figures/: Alu and Au.excalidraw  Arithmetic Logic Unit.excalidraw  Arithmetic Unit High.excalidraw  Arithmetic Unit Low.excalidraw  DIVS.excalidraw  DIVU.excalidraw
src/: 68000.h  68000_Common.cpp  68000_Divs.cpp  68000_Divu.cpp  CMakeLists.txt
test/: 68000_Divs_Test.cpp  68000_Divu_Test.cpp  CMakeLists.txt
